--- a/Traffic_Sign_Classifier.ipynb
+++ b/Traffic_Sign_Classifier.ipynb
@@ -95,7 +95,7 @@
       "Number of training examples = 34799\n",
       "Number of validation examples = 4410\n",
       "Number of testing examples = 12630\n",
-      "Image data shape = (32, 32)\n",
+      "Image data shape = (32, 32, 3)\n",
       "Number of classes = 43\n"
      ]
     }
@@ -114,7 +114,7 @@
     "n_test = X_test.shape[0]\n",
     "\n",
     "# TODO: What's the shape of an traffic sign image?\n",
-    "image_shape = X_train.shape[1:3]\n",
+    "image_shape = X_train.shape[1:]\n",
     "\n",
     "# TODO: How many unique classes/labels there are in the dataset.\n",
     "n_classes = max(y_train) + 1\n",
